--- a/cluster_simulator/cluster_simulator_poc.ipynb
+++ b/cluster_simulator/cluster_simulator_poc.ipynb
@@ -2221,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2257,20 +2257,20 @@
          "type": "scatter",
          "x": [
           0,
-          3.8880789567986955,
-          3.8880789567986955,
-          13.888078956798696,
-          13.888078956798696,
-          54.712908003185
+          4.761904761904762,
+          4.761904761904762,
+          14.761904761904763,
+          14.761904761904763,
+          64.76190476190476
          ],
          "xaxis": "x",
          "y": [
-          257.1964229922337,
-          257.1964229922337,
+          210,
+          210,
           0,
           0,
-          122.4744871391589,
-          122.4744871391589
+          100,
+          100
          ],
          "yaxis": "y"
         },
@@ -2281,6 +2281,8 @@
          "name": "app2",
          "showlegend": false,
          "text": [
+          "WAIT|volume=0B",
+          "WAIT|volume=0B",
           "COMPUTE|volume=0B",
           "COMPUTE|volume=0B"
          ],
@@ -2288,10 +2290,14 @@
          "type": "scatter",
          "x": [
           0,
-          15
+          40,
+          40,
+          55
          ],
          "xaxis": "x2",
          "y": [
+          0,
+          0,
           0,
           0
          ],
@@ -2305,15 +2311,17 @@
          "type": "scatter",
          "x": [
           0,
-          3.8880789567986955,
-          13.888078956798696,
-          15,
-          54.712908003185
+          4.761904761904762,
+          14.761904761904763,
+          40,
+          55,
+          64.76190476190476
          ],
          "xaxis": "x3",
          "y": [
-          2,
-          2,
+          1,
+          1,
+          1,
           2,
           1,
           0
@@ -2335,7 +2343,7 @@
          "type": "scatter",
          "x": [
           0,
-          54.712908003185
+          64.76190476190476
          ],
          "xaxis": "x3",
          "y": [
@@ -2353,6 +2361,7 @@
          "text": [
           "app1|Read|SSD | +volume=953.67 MB",
           "app1|Compute | +volume=0B",
+          "app2|Wait | +volume=0B",
           "app2|Compute | +volume=0B",
           "app1|Write|SSD | +volume=4.66 GB"
          ],
@@ -2360,16 +2369,18 @@
          "type": "scatter",
          "x": [
           0,
-          3.8880789567986955,
-          13.888078956798696,
-          15,
-          54.712908003185
+          4.761904761904762,
+          14.761904761904763,
+          40,
+          55,
+          64.76190476190476
          ],
          "xaxis": "x4",
          "y": [
           0,
           0.5,
           0.5,
+          3,
           3,
           3
          ],
@@ -2384,6 +2395,7 @@
          "text": [
           "app1|Read|SSD | +volume=953.67 MB",
           "app1|Compute | +volume=0B",
+          "app2|Wait | +volume=0B",
           "app2|Compute | +volume=0B",
           "app1|Write|SSD | +volume=4.66 GB"
          ],
@@ -2391,13 +2403,15 @@
          "type": "scatter",
          "x": [
           0,
-          3.8880789567986955,
-          13.888078956798696,
-          15,
-          54.712908003185
+          4.761904761904762,
+          14.761904761904763,
+          40,
+          55,
+          64.76190476190476
          ],
          "xaxis": "x5",
          "y": [
+          0,
           0,
           0,
           0,
@@ -3413,24 +3427,13 @@
     "nvram_tier = Tier(env, 'NVRAM', bandwidth=nvram_bandwidth, capacity=80e9)\n",
     "cluster = Cluster(env, tiers=[ssd_tier, nvram_tier])\n",
     "app1 = Application(env, name=\"app1\", compute=[0, 10], read=[1e9, 0], write=[0, 5e9], data=data)\n",
-    "app2 = Application(env, name=\"app2\", compute=[0, 15], read=[0, 0], write=[0, 0], data=data)\n",
+    "app2 = Application(env, name=\"app2\", compute=[0, 15], read=[0, 0], write=[0, 0], delay=40, data=data)\n",
     "env.process(app1.run(cluster, tiers=[0, 0]))\n",
     "env.process(app2.run(cluster, tiers=[1, 1]))\n",
     "env.run()\n",
     "\n",
-    "\n",
-    "\n",
     "fig = display_run(data, cluster)\n",
     "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[\"a\", \"b\"] + [\"c\"] + [\"d\", \"e\"]"
    ]
   }
  ],
