--- a/cluster_simulator/notebooks/cluster_simulator_poc.ipynb
+++ b/cluster_simulator/notebooks/cluster_simulator_poc.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,28 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we attach the tiers to a cluster:\n",
-    "cluster = Cluster(env, compute_nodes=3,   # number of physical nodes\n",
-    "                       cores_per_node=2,  # available cores per node\n",
-    "                       tiers=[ssd_tier, nvram_tier]) # associate storage tiers to the cluster\n",
-    "                    #          ^tier 0,    ^tier 1, tier..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "Execution time = 0.004516124725341797 seconds\n"
+      "Execution time = 168.50859904289246 seconds\n"
      ]
     },
     {
@@ -160,31 +146,19 @@
          },
          "name": "app#app1",
          "text": [
-          "READ|to/from:NVRAM|volume=1.0 GB",
-          "READ|to/from:NVRAM|volume=1.0 GB",
           "COMPUTE|volume=0B",
-          "COMPUTE|volume=0B",
-          "WRITE|to/from:NVRAM|volume=10.0 GB",
-          "WRITE|to/from:NVRAM|volume=10.0 GB"
+          "COMPUTE|volume=0B"
          ],
          "textposition": "top center",
          "type": "scatter",
          "x": [
-          0,
-          1.2820512820512822,
-          1.2820512820512822,
-          16.28205128205128,
-          16.28205128205128,
-          35.69952701020662
+          4.761904761904762,
+          19.761904761904763
          ],
          "xaxis": "x",
          "y": [
-          780,
-          780,
           0,
-          0,
-          515,
-          515
+          0
          ],
          "yaxis": "y"
         },
@@ -209,22 +183,16 @@
          "name": "SSD",
          "showlegend": false,
          "text": [
-          "app1|Read|NVRAM | +volume=1.0 GB",
-          "app1|Compute | +volume=0B",
-          "app1|Write|NVRAM | +volume=10.0 GB"
+          "app1|Compute | +volume=0B"
          ],
          "textposition": "top center",
          "type": "scatter",
          "x": [
-          0,
-          1.2820512820512822,
-          16.28205128205128,
-          35.69952701020662
+          4.761904761904762,
+          19.761904761904763
          ],
          "xaxis": "x2",
          "y": [
-          0,
-          0,
           0,
           0
          ],
@@ -237,24 +205,18 @@
          "name": "NVRAM",
          "showlegend": false,
          "text": [
-          "app1|Read|NVRAM | +volume=1.0 GB",
-          "app1|Compute | +volume=0B",
-          "app1|Write|NVRAM | +volume=10.0 GB"
+          "app1|Compute | +volume=0B"
          ],
          "textposition": "top center",
          "type": "scatter",
          "x": [
-          0,
-          1.2820512820512822,
-          16.28205128205128,
-          35.69952701020662
+          4.761904761904762,
+          19.761904761904763
          ],
          "xaxis": "x3",
          "y": [
           0,
-          1000000000,
-          1000000000,
-          11000000000
+          0
          ],
          "yaxis": "y3"
         },
@@ -265,15 +227,11 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          0,
-          1.2820512820512822,
-          16.28205128205128,
-          35.69952701020662
+          4.761904761904762,
+          19.761904761904763
          ],
          "xaxis": "x4",
          "y": [
-          1,
-          1,
           1,
           0
          ],
@@ -293,8 +251,8 @@
          ],
          "type": "scatter",
          "x": [
-          0,
-          35.69952701020662
+          4.761904761904762,
+          19.761904761904763
          ],
          "xaxis": "x4",
          "y": [
@@ -1260,6 +1218,48 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# we attach the tiers to a cluster:\n",
+    "cluster = Cluster(env, compute_nodes=3,   # number of physical nodes\n",
+    "                       cores_per_node=2,  # available cores per node\n",
+    "                       tiers=[ssd_tier, nvram_tier]) # associate storage tiers to the cluster\n",
+    "                    #          ^tier 0,    ^tier 1, tier...\n",
+    "                    \n",
+    "\n",
+    "env.process(app1.run(cluster, placement=[1, 1]))\n",
+    "env.run()\n",
+    "\n",
+    "print(f\"Execution time = {time.time()-start_time} seconds\")\n",
+    "\n",
+    "fig = display_run(data, cluster, width=800, height=800)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time = 0.0 seconds\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-684d0549820c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Execution time = {time.time()-start_time} seconds\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdisplay_run\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mapp1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcluster\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m800\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m800\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\cluster_simulator\\cluster_simulator\\analytics.py\u001b[0m in \u001b[0;36mdisplay_run\u001b[1;34m(data, cluster, width, height)\u001b[0m\n\u001b[0;32m    363\u001b[0m                                 line_shape='hv', showlegend=False), row=i, col=1)\n\u001b[0;32m    364\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 365\u001b[1;33m     fig.append_trace(go.Scatter(x=np.array([points[0], points[-1]]), y=np.array([cluster.compute_cores.capacity]*2), text=[\"Maximum available cores in cluster=\" + str(cluster.compute_cores.capacity)]*2, line_shape='hv', showlegend=False,\n\u001b[0m\u001b[0;32m    366\u001b[0m                                 line=dict(color='red', width=3, dash='dot')), row=i, col=1)\n\u001b[0;32m    367\u001b[0m     \u001b[0mfig\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'layout'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'yaxis'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'title'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'CPU usage'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
